# DiscordBot-Rust

./: .gitignore  Cargo.toml  docker-compose.yaml  docker-compose.yml  dockerfile  readme.md  start_services.sh
src/: main.rs
src/api/: llama_api.rs  mod.rs  ollama_api.rs  riot_api.rs  twitch.rs
src/commands/: copypasta.rs  createprivatevoicechannel.rs  eightball.rs  flipcoin.rs  gamestatus.rs  halloffame.rs  id.rs  inhouse.rs  mentalhelp.rs  messageleaderboard.rs  mod.rs  ping.rs  quote.rs  quoteadd.rs  reminders.rs  roledice.rs  scouting.rs  summarize.rs
src/commands/business/: embed.rs  inhouse.rs  league_of_legends.rs  llama.rs  mod.rs  ollama.rs  quote.rs  twitch.rs
src/commands/business/prompts/: summary.md
src/sockets/: twitch.rs
src/utils/: discord_message.rs  llama_api.rs  mod.rs  mongo.rs  riot_api.rs  skynet.rs  skynet_constants.rs  string_utils.rs
