[package]
name = "discord_bot_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
mongodb = "2.3.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
riven = "2.27"
chrono = "0.4.31"
time = "0.3.30"