[package]
name = "discord_bot_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
mongodb = "2.3.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
riven = "2.34.0-beta.0"
chrono = "0.4.31"
time = "0.3.30"
queues = "1.0.2"
reqwest = { version = "0.11", features = ["blocking","json"] }
blocking = "1.5.1"
serde_json = "1.0.108"
url = "2.5.0"
log = "0.4.20"
simple_logger = "4.3.3"